# Untabify

./: Cargo.toml  readme.md
.github/workflows/: auto-release.yml
scripts/: install.ps1
src/: args.rs  config.rs  main.rs
