[package]
name = "untabify"
description = "A tool to un-tabify files"
version = "0.2.2"
edition = "2021"
authors = ["Simon Curtis"]

[dependencies]
clap = { version = "4.5.19", features = ["derive"] }
dirs = "5.0.1"
glob = "0.3.1"
serde = { version = "1.0.214", features = ["derive"] }
serde_json = "1.0.132"
walkdir = "2.5.0"
